kustomize/base/deployment_backapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
  labels:
    app: backapp
    homework: backapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backapp
      homework: backapp
  template:
    metadata:
      labels:
        app: backapp
        homework: backapp
    spec:
      containers:
      - name: backapp
        image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
        ports:
        - containerPort: 8080
