kustomize/base/deployment_frontapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw4-frontapp
  labels:
    app: frontapp
    homework: frontapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontapp
  template:
    spec:
      containers:
      - name: frontapp
        image: quay.io/drsylent/cubix/block3/homework-frontapp:springboot3
        ports:
        - containerPort: 8080
