kustomize/base/patch_backapp_var.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
