kustomize/base/patch_frontapp_var.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
