kustomize/base/patch_replicacount_backapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw4-backapp
  labels:
    app: backapp
    homework: backapp
spec:
  replicas: 1
