kustomize/base/patch_springboothead_frontapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw4-backapp
  labels:
    app: backapp
    homework: backapp
spec:
  selector:
    matchLabels:
      app: backapp
  template:
    spec:
      containers:
      - name: backapp
