kustomize/base/service_frontapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp
  labels:
    app: frontapp
    training: block4
    homework: frontapp
spec:
  selector:
      app: frontapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
